<resources>
    <string name="app_name">WalletApp</string>
    <string name="facebook_app_id">1445606218812457</string>
    <string name="fb_login_protocol_scheme">fb1445606218812457</string>
    <string name="radio_income">Bevétel</string>
    <string name="radio_expenditure">Kiadás</string>
    <string name="radio_both">Mindkettő</string>
    <string name="button_addNewTransaction">Új tranzakció felvétele</string>
    <string name="text_value">Összeg</string>
    <string name="text_name">Név</string>
    <string name="textView_addNewTrans">Új tranzakció hozzáadása</string>
    <string-array name="types_income">
        <item>Fizetés</item>
        <item>Szerencsejáték</item>
        <item>Ösztöndíj</item>
        <item>Szoc.Tám.</item>
        <item>Tippmix</item>
        <item>Eladás</item>
    </string-array>
    <string-array name="types_expense">
        <item>Étel</item>
        <item>Utazás</item>
        <item>Szórakozás</item>
        <item>Alkohol</item>
        <item>Dohány</item>
        <item>Biztosítás</item>
        <item>Elektronika</item>
        <item>Kocsi</item>
    </string-array>
    <string-array name="transaction_orderby_types">
        <item>Idő szerint csökkenő</item>
        <item>Idő szerint növekvő</item>
        <item>Érték szerint csökkenő</item>
        <item>Érték szerint növekvő</item>
    </string-array>
    <string name="title_activity_nav_drawer">Áttekintés</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="walletapp">WalletApp</string>
    <string name="by_teamlld">by teamlld</string>
    <string name="convert">Konvertálás</string>
    <string name="logout">Kijelentkezés</string>
    <string name="all_transactions">Összes tranzakció</string>
    <string name="diagrams">Diagramok</string>
    <string name="sorting_order">Rendezési sorrend:</string>
    <string name="catDiagramTitle">"Kiadások kategóriák szerint (HUF)"</string>
    <string name="catIncomeDiagramTitle">"Bevételek kategóriák szerint (HUF)"</string>
    <string name="huf">&#160;HUF</string>
    <string name="name">Név</string>
    <string name="statingBalance">Kezdő összeg</string>
    <string name="saveButton">Mentés</string>
    <string name="settings">Beállítások</string>
    <string name="base_details">Alapadatok</string>
    <string name="balance_chart">Egyenleg diagram</string>
    <string name="latest_trans">Az adott számla utóbbi tranzakciói:</string>
    <string name="balance">Balance</string>
    <string name="new_transaction">Új tranzakció</string>
    <string name="all_transaction">Összes tranzakció</string>
    <string name="transaction_details">A tranzakció részletei</string>
    <string name="tr_det_name">Név:</string>
    <string name="tr_det_type">Típus:</string>
    <string name="tr_det_date">Dátum:</string>
    <string name="balance_fragment">&#160;egyenlege:</string>
    <string name="income">Bevétel</string>
    <string name="expense">Kiadás</string>
    <string name="unknown_type">Ismeretlen típus</string>
    <string name="new_tr_details">Adatok:</string>
    <string name="change_valuta">Valuta váltás</string>
    <string name="sourceCurrency">Forrás</string>
    <string name="destinationCurrency">Cél</string>
    <string name="converter_enterTheValue">Írja be az összeget</string>
    <string name="change">Átváltás</string>
</resources>
