<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_convert"
            android:icon="@drawable/ic_attach_money_black_24dp"
            android:title="@string/convert" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_directions_run_black_24dp"
            android:title="@string/logout" />
        <item
            android:id="@+id/nav_all_transactions"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/all_transactions" />
        <item
            android:id="@+id/nav_graphs"
            android:icon="@drawable/ic_receipt_black_24dp"
            android:title="@string/diagrams" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
