<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context="teamlld.nik.uniobuda.hu.walletapp.activities.SettingsActivity">


    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/base_details"
        android:textSize="28dp"
        android:textStyle="bold"
        android:id="@+id/title"
        android:layout_marginBottom="10dp"
        />


    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_below="@+id/title"
        android:textSize="24dp"
        />

    <android.support.v7.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/startingBalance"
        android:hint="@string/statingBalance"
        android:layout_below="@id/name"
        android:textSize="24dp"
        android:inputType="number"
        />

    <android.support.v7.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/saveSettings"
        android:layout_below="@+id/startingBalance"
        android:text="@string/saveButton"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true" />

</RelativeLayout>
