<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="teamlld.nik.uniobuda.hu.walletapp.NewTransactionActivity">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/newTransactionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/textView_addNewTrans"
        android:textSize="22sp" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/newTransactionName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newTransactionTitle"
        android:hint="@string/text_name" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/newTransactionValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newTransactionName"
        android:hint="@string/text_value"
        android:inputType="number" />

    <android.support.v7.widget.AppCompatSpinner
        android:spinnerMode="dropdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/newTransactionType"
        android:layout_below="@id/newTransactionValue"
        />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup_newTransaction"
        android:orientation="horizontal"
        android:layout_below="@id/newTransactionType"
        >
        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/radio_income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_income"
            android:onClick="onRadioButtonClicked"/>
        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/radio_expenditure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_expenditure"
            android:checked="true"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/addNewTransactionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup_newTransaction"
        android:layout_centerHorizontal="true"
        android:text="@string/button_addNewTransaction" />

</RelativeLayout>
