<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/text_valuta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_valuta"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:padding="16dp"
        android:textAlignment="center"
        />


    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/button_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_valuta"
        android:layout_centerHorizontal="true">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/conv_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/sourceCurrency"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/conv_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/destinationCurrency"/>

    </android.support.v7.widget.LinearLayoutCompat>


    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/sum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_value"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:layout_below="@+id/button_layout"
        android:layout_margin="8dp"/>

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sum">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/conv_sum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/converter_enterTheValue"
            android:inputType="numberDecimal"
            android:layout_weight="3"
            />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/from_valuta"
            android:layout_width="wrap_content"
            android:layout_weight="0"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/conv_sum"
            android:layout_toRightOf="@+id/conv_sum"
            android:layout_below="@+id/sum"/>


    </android.support.v7.widget.LinearLayoutCompat>


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/conv_todo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_layout"
        android:text="@string/change"/>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/conv_todo"
        android:layout_below="@+id/text_layout">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/result"
            android:layout_margin="8dp"
            android:layout_weight="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_layout"
            android:layout_toEndOf="@id/conv_todo"
            android:layout_toRightOf="@id/conv_todo"
            android:textSize="24sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/to_valuta"
            android:layout_width="wrap_content"
            android:layout_weight="0"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/result"
            android:layout_toRightOf="@+id/result"
            android:layout_below="@+id/sum"/>

    </android.support.v7.widget.LinearLayoutCompat>





</RelativeLayout>