<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="teamlld.nik.uniobuda.hu.walletapp.activities.AllTransactionsActivity">

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sorting_order"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textStyle="bold"
        android:paddingLeft="10dp"
        android:textSize="16dp"
        android:id="@+id/all_transactions_ordertext"
        />

    <android.support.v7.widget.AppCompatSpinner
        android:spinnerMode="dropdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/transaction_order_by_spinner"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_alignParentRight="true"
        />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/all_transactions_radio_group"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_below="@id/all_transactions_ordertext"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        >
        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/all_transactions_radio_income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_income"
            android:onClick="onRadioButtonClicked"/>
        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/all_transactions_radio_expenditure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_expenditure"
            android:onClick="onRadioButtonClicked"/>
        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/all_transactions_radio_both"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_both"
            android:checked="true"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/all_transactions_list_view"
        android:layout_below="@id/all_transactions_radio_group"
        />
</RelativeLayout>
