<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="26dp"
    android:orientation="vertical"
    tools:context="teamlld.nik.uniobuda.hu.walletapp.activities.DetailsActivity">

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        android:textStyle="bold"
        android:text="@string/transaction_details"
        android:id="@+id/details_header"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0"
        android:layout_below="@id/details_header"
        />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/details_income"
        android:text=""
        android:textSize="20sp"
        android:layout_below="@+id/details_header"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="#f3f3f3"
        android:padding="5dp"
        />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/details_activity_left"
        android:text="@string/tr_det_name"
        android:layout_below="@+id/details_income"
        />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/details_activity_left"
        android:text="Összeg:"
        android:layout_below="@+id/details_name"
        />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/details_activity_left"
        android:text="@string/tr_det_type"
        android:layout_below="@+id/details_value"
        />


    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/details_activity_left"
        android:text="@string/tr_det_date"
        android:layout_below="@+id/details_type"
        />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/details_name"
        android:text=""
        style="@style/details_activity_value"
        android:layout_below="@+id/details_income"
        />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/details_value"
        android:text=""
        style="@style/details_activity_value"
        android:layout_below="@+id/details_name"
        />


    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/details_type"
        android:text=""
        style="@style/details_activity_value"
        android:layout_below="@id/details_value"
        />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/details_date"
        android:text=""
        style="@style/details_activity_value"
        android:layout_below="@+id/details_type"
        />

</RelativeLayout>
